# capstone_project

./: .gitignore  dvc.yaml  projectflow.md  pyproject.toml  setup.py
.dvc/: config
.github/workflows/: ci.yaml
docs/: conf.py
flask_app/: app.py
notebooks/: data.csv  exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py
reports/: experiment_info.json  metrics.json
scripts/: promote_model.py
src/connections/: s3_connection.py  ssms_connection.py
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering.py
src/logger/: __init__.py
src/model/: model_building.py  model_evaluation.py  register_model.py
tests/: test_model.py
