[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.45.0",
    "cookiecutter>=2.7.1",
    "dagshub>=0.7.0",
    "dvc[s3]>=3.67.1",
    "flask>=3.1.3",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "mlflow>=3.14.0",
    "mlflow-skinny>=3.14.0",
    "nltk>=3.10.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "prometheus-client>=0.25.0",
    "pyodbc>=5.3.0",
    "scikit-learn>=1.7.2",
    "setuptools>=83.0.0",
    "xgboost>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]